--- a/pom.xml
+++ b/pom.xml
@@ -3,4 +3,20 @@
   <groupId>com.epam.NewYearGift</groupId>
   <artifactId>NewYearGift</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <dependencies>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-core</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+	</dependencies>
+ 
+	<properties>
+		<spring.version>3.2.3.RELEASE</spring.version>
+	</properties>
 </project>
